--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,14 @@
     "DefaultConnection1": "Server=.\\SQLExpress;Database=Entidades;User Id=sa;Password=juan;Trusted_Connection=false;TrustServerCertificate=True;Encrypt=false",
     "DefaultConnection": "Server=cerberus\\SQLEXPRESS;Database=Entidades;User Id=sa;Password=juan;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "General": {
+    "separadorCsv": ";",
+    "cabeceraEstaticaMuestras": "idEntidad;idCampo;idTipoMuestra;fechaMuestra;",
+    "inicioDatosVariablesMuestras": "4",
+    "cabeceraEstaticaEntidades": "idEntidad",
+    "formatoFechaHora": "yyyy-MM-dd HH:mm:ss",
+    "formatoFechaHoraSql": "yyyyMMdd HH:mm:ss.fff"
+
+  },
   "AllowedHosts": "*"
 }
