agregamos carga de entidades

--- a/appsettings.json
+++ b/appsettings.json
@@ -14,7 +14,7 @@
     "separadorCsv": ";",
     "cabeceraEstaticaMuestras": "idEntidad;idCampo;idTipoMuestra;fechaMuestra;",
     "inicioDatosVariablesMuestras": "4",
-    "cabeceraEstaticaEntidades": "idEntidad",
+    "cabeceraEstaticaEntidades": "idEntidad;",
     "formatoFechaHora": "yyyy-MM-dd HH:mm:ss",
     "formatoFechaHoraSql": "yyyyMMdd HH:mm:ss.fff"
 
