--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   "ConnectionStrings": {
 
     "DefaultConnection1": "Server=.\\SQLExpress;Database=Entidades;User Id=sa;Password=juan;Trusted_Connection=false;TrustServerCertificate=True;Encrypt=false",
-    "DefaultConnection": "Server=cerberus\\SQLEXPRESS;Database=entidadesPrueba;User Id=sa;Password=juan;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=cerberus\\SQLEXPRESS;Database=prueba;User Id=sa;Password=juan;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "General": {
     "separadorCsv": ";",
