--- a/Ejecutable/appsettings.json
+++ b/Ejecutable/appsettings.json
@@ -13,7 +13,8 @@
     "cabeceraEstaticaMuestras": "idEntidad;idCampo;idTipoMuestra;fechaMuestra;",
     "inicioDatosVariablesMuestras": "4",
     "cabeceraEstaticaEntidades": "idEntidad;",
-    "formatoFechaHora": "yyyy-MM-dd HH:mm:ss",
+    "formatoFechaHora1": "yyyy-MM-dd HH:mm:ss",
+    "formatoFechaHora": "yyyy-MM-dd",
     "formatoFechaHoraSql": "yyyyMMdd HH:mm:ss.fff"
 
   },
