--- a/appsettings.json
+++ b/appsettings.json
@@ -10,8 +10,8 @@
   },
   "General": {
     "separadorCsv": ";",
-    "cabeceraEstaticaMuestras": "idEntidad;idCampo;idTipoMuestra;fechaMuestra;",
-    "inicioDatosVariablesMuestras": "4",
+    "cabeceraEstaticaMuestras": "idEntidad;idCampo;idTipoMuestra;idMuestra;fechaMuestra;",
+    "inicioDatosVariablesMuestras": "5",
     "cabeceraEstaticaEntidades": "idEntidad;",
     "formatoFechaHora1": "yyyy-MM-dd HH:mm:ss",
     "formatoFechaHora": "yyyy-MM-dd",
